🔥 新增 VRAM 使用量圖表功能與完整視覺化工具集
✨ 主要新增功能:
- VRAM 使用量監控與視覺化 (vram_monitor.py)
- 多種 VRAM 圖表類型：節點對比、熱力圖、時間序列
- 快速繪圖工具整合 (quick_gpu_trend_plots.py)
- 進階分析器 (advanced_gpu_trend_analyzer.py)
- 中文字體自動配置系統 (font_config.py)

🚀 主執行腳本增強:
- 新增 4 種 VRAM 命令選項 (vram-nodes, vram-heatmap, vram-timeline, vram-all)
- 完整的命令列介面與錯誤處理
- 自動環境檢查與依賴安裝

📚 文件與指南:
- 更新主 README.md 包含 VRAM 功能說明
- 新增視覺化工具詳細說明 (visualization/README.md)
- 新增快速開始指南 (VISUALIZATION_QUICK_START.md)
- 新增功能特性文件 (VRAM_FEATURES.md)

🛠️ 技術改進:
- 跨平台字體支援 (Linux/Windows/macOS)
- 模組化設計便於擴展
- 錯誤處理與日誌輸出
- 相容現有數據格式

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,55 @@
-data
+# 數據目錄
+data/
+plots/
+
+# 日誌檔案
 *.log
+gpu_log_cron.log
+
+# Python 相關
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# 虛擬環境
+.venv/
+venv/
+env/
+ENV/
+
+# IDE 相關
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# 作業系統相關
+.DS_Store
+Thumbs.db
+
+# 暫存檔案
+*.tmp
+*.bak
+*.backup
+
+# 歷史備份檔案
+archive_*.zip
