feat: Implement Netdata API testing script for GPU monitoring
- Added `debug_netdata.py` to test connectivity and response format of Netdata API.
- Included functionality to check GPU utilization and VRAM usage for multiple nodes.
- Enhanced error handling and response validation for API requests.

feat: Create main entry point for AMD GPU monitoring system

- Introduced `gpu-monitor.py` as the main entry point for the refactored CLI interface.
- Added dependency checks and instructions for installation.

feat: Establish main module entry point for the application

- Created `src/__main__.py` to allow execution of the application using `python -m src`.

feat: Develop data collection service for GPU metrics

- Implemented `data_collection_service.py` to unify data collection from Netdata and management APIs.
- Added methods for daily data collection and node-specific data retrieval.

feat: Introduce data processing service for analysis and reporting

- Created `data_processing_service.py` to handle data analysis, aggregation, and transformation.
- Implemented methods for loading node data, calculating statistics, and generating reports.

test: Add comprehensive testing for refactored modules

- Developed `test_refactor.py` to validate module imports, configuration, models, CLI structure, and project organization.
- Ensured all tests pass to confirm the integrity of the refactored codebase.

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,13 @@
 # 基本數據處理依賴（用於數據收集腳本）
 pandas>=1.3.0
 
+# 環境變數載入
+python-dotenv>=1.0.0
+
+# HTTP 客戶端 (async)
+aiohttp>=3.8.0
+
+# CLI 框架
+click>=8.1.0
+
 # 視覺化依賴請參考 visualization/requirements.txt
