--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ click = "^8.1.0"
 pandas = "^2.0.0"
 numpy = "^1.24.0"
 aiohttp = "^3.8.0"
+python-dotenv = "^1.0.0"
 asyncio-mqtt = {version = "^0.16.0", optional = true}
 
 # 視覺化依賴 (可選)
